<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:background="@drawable/login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

       <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="73dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/mahyco_grow_logo" />
        </RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:hint="@string/enter_emp_code"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edt_emp_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:hint="@string/enter_pass"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_30"
            android:enabled="true"
            android:clickable="true"
            android:gravity="end"
            android:text="@string/forgot_pass"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.widget.Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/border_btn"
                android:padding="@dimen/btn_padding"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:enabled="true"
            android:clickable="true"
            android:padding="@dimen/dp_5"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:visibility="gone" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:clickable="true"
        android:enabled="true"
        android:padding="@dimen/dp_20"
        android:text="@string/skip_login"

        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="normal"
        android:visibility="gone" />


    <include
        android:id="@+id/llProgressBar"
        layout="@layout/layout_progressbar_with_text"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="ver"
        android:id="@+id/textViewVersionName"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:textColor="@color/white"/>

</RelativeLayout>