<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity"
    android:background="@drawable/login">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="73dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:src="@drawable/mahyco_grow_logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_30"
                android:hint="@string/enter_emp_code"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emp_code_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@drawable/edit_text_selector"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_30"
                android:hint="@string/enter_pass_set"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@drawable/edit_text_selector"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.widget.Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/border_btn"
                android:padding="@dimen/btn_padding"
                android:text="@string/register_rg"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="normal" />

        </RelativeLayout>

    </LinearLayout>

    <include
        android:id="@+id/llProgressBar"
        layout="@layout/layout_progressbar_with_text"
        android:visibility="gone" />

</RelativeLayout>