<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp_5"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="13">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_cmr_data"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="@dimen/card_height_upload"
                android:layout_margin="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_12"
                app:cardElevation="@dimen/dp_5"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:text="@string/cmr_data"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_tag_data"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="@dimen/card_height_upload"
                android:layout_margin="@dimen/dp_10"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/dp_12"
                app:cardElevation="@dimen/dp_5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:text="@string/tag_data"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_insurance"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="@dimen/card_height_upload"
                    android:layout_margin="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_12"
                    app:cardElevation="@dimen/dp_5"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:text="@string/cmr_insurance"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_my_travel"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="@dimen/card_height_upload"
                    android:layout_margin="@dimen/dp_10"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="@dimen/dp_12"
                    app:cardElevation="@dimen/dp_5">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:text="@string/my_travel"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_be_vog"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="@dimen/card_height_upload"
                    android:layout_margin="@dimen/dp_10"
                    app:cardCornerRadius="@dimen/dp_12"
                    app:cardElevation="@dimen/dp_5"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimary">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerVertical="true"
                            android:text="@string/cmr_be_vog"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_16"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </GridLayout>
    </LinearLayout>

</ScrollView>